# rosmsg_gencpp

./: Cargo.toml  README.md
assets/: msg.h.hbs  msg.h.j2
src/: helpers.rs  lib.rs  main.rs
